-
Bug
-
Resolution: Fixed
-
P2
-
repo-valhalla
-
$ uname -a
Linux srikanth-ThinkPad-T480 4.15.0-99-generic #100-Ubuntu SMP Wed Apr 22 20:32:56 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux
-
x86
-
other
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f9fe05283aa, pid=4661, tid=4662
#
# JRE version: OpenJDK Runtime Environment (15.0) (build 15-internal+0-adhoc.srikanth.valhalla)
# Java VM: OpenJDK 64-Bit Server VM (15-internal+0-adhoc.srikanth.valhalla, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# v ~BufferBlob::buffered value type
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /home/srikanth/testruns/JTwork/scratch/0/core.4661)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -XX:+PrintCompilation -XX:+PrintIdeal -XX:+UnlockDiagnosticVMOptions -XX:+PrintOptoAssembly -XX:-OmitStackTraceInFastThrow -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Dtest.class.path.prefix=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes:/home/srikanth/testruns/JTwork/classes/0/testlibrary:/home/srikanth/testruns/JTwork/classes/0/test/lib:/home/srikanth/testruns/JTwork/classes/0/compiler/whitebox:/home/srikanth/testruns/JTwork/classes/0 -Dtest.file=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes/TestCallingConvention.java -Dtest.src=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes -Dtest.src.path=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/testlibrary:/home/srikanth/gitreps/valhalla/test/lib:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/whitebox:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg -Dtest.classes=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d -Dtest.class.path=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d:/home/srikanth/testruns/JTwork/classes/0/testlibrary:/home/srikanth/testruns/JTwork/classes/0/test/lib:/home/srikanth/testruns/JTwork/classes/0/compiler/whitebox:/home/srikanth/testruns/JTwork/classes/0 -Dtest.vm.opts=-Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Dtest.tool.vm.opts=-J-Djava.awt.headless=true -J-Xss512k -J-Xverify:all -J-Xmx1024M -J-ea:com.sun.tools... -Dtest.compiler.opts=-XDdev -Dtest.java.opts= -Dtest.jdk=/home/srikanth/gitreps/valhalla/test/../build/linux-x86_64-server-release/images/jdk -Dcompile.jdk=/home/srikanth/gitreps/valhalla/test/../build/linux-x86_64-server-release/images/jdk -Dtest.timeout.factor=2.0 -Dtest.root=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Xbootclasspath/a:. -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+WhiteBoxAPI -XX:-UseArrayLoadStoreProfile -XX:+AlwaysIncrementalInline -XX:ValueArrayElemMaxFlatOops=5 -XX:ValueArrayElemMaxFlatSize=-1 -XX:ValueFieldMaxFlatSize=-1 -XX:+ValueTypePassFieldsAsArgs -XX:+ValueTypeReturnedAsFields -Dsun.reflect.inflationThreshold=10000 -XX:-BackgroundCompilation -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,java.lang.invoke.*::* -XX:CompileCommand=compileonly,java.lang.Long::sum -XX:CompileCommand=compileonly,java.lang.Object::<init> -XX:CompileCommand=inline,compiler.valhalla.valuetypes.MyValue*::<init> -XX:CompileCommand=compileonly,compiler.valhalla.valuetypes.*::* compiler.valhalla.valuetypes.TestCallingConvention run
Host: Intel(R) Core(TM) i5-8350U CPU @ 1.70GHz, 8 cores, 15G, Ubuntu 18.04.3 LTS
Time: Thu May 14 16:29:29 2020 IST elapsed time: 0.228397 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f9ff802c800): JavaThread "main" [_thread_in_Java, id=4662, stack(0x00007fa001301000,0x00007fa001382000)]
Stack: [0x00007fa001301000,0x00007fa001382000], sp=0x00007fa00137fa38, free space=506k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
v ~BufferBlob::buffered value type
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0xca7fb6] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.115]+0x446
V [libjvm.so+0xca91fc] Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x10c
V [libjvm.so+0x8dbaa4] JVM_InvokeMethod+0x164
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@15-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@15-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@15-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@15-internal
j compiler.valhalla.valuetypes.TestCallingConvention.test29_verifier(Z)V+17
v ~StubRoutines::call_stub
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0xca7fb6] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.115]+0x446
V [libjvm.so+0xca91fc] Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x10c
V [libjvm.so+0x8dbaa4] JVM_InvokeMethod+0x164
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@15-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@15-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@15-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@15-internal
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+809
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0x8a77c7] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.107] [clone .constprop.279]+0x167
V [libjvm.so+0x8a9f58] jni_CallStaticVoidMethod+0x138
C [libjli.so+0x5abb] JavaMain+0xebb
C [libjli.so+0x9409] ThreadJavaMain+0x9
#
# SIGSEGV (0xb) at pc=0x00007f9fe05283aa, pid=4661, tid=4662
#
# JRE version: OpenJDK Runtime Environment (15.0) (build 15-internal+0-adhoc.srikanth.valhalla)
# Java VM: OpenJDK 64-Bit Server VM (15-internal+0-adhoc.srikanth.valhalla, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# v ~BufferBlob::buffered value type
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /home/srikanth/testruns/JTwork/scratch/0/core.4661)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -XX:+PrintCompilation -XX:+PrintIdeal -XX:+UnlockDiagnosticVMOptions -XX:+PrintOptoAssembly -XX:-OmitStackTraceInFastThrow -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Dtest.class.path.prefix=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes:/home/srikanth/testruns/JTwork/classes/0/testlibrary:/home/srikanth/testruns/JTwork/classes/0/test/lib:/home/srikanth/testruns/JTwork/classes/0/compiler/whitebox:/home/srikanth/testruns/JTwork/classes/0 -Dtest.file=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes/TestCallingConvention.java -Dtest.src=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes -Dtest.src.path=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/valhalla/valuetypes:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/testlibrary:/home/srikanth/gitreps/valhalla/test/lib:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg/compiler/whitebox:/home/srikanth/gitreps/valhalla/test/hotspot/jtreg -Dtest.classes=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d -Dtest.class.path=/home/srikanth/testruns/JTwork/classes/0/compiler/valhalla/valuetypes/TestCallingConvention.d:/home/srikanth/testruns/JTwork/classes/0/testlibrary:/home/srikanth/testruns/JTwork/classes/0/test/lib:/home/srikanth/testruns/JTwork/classes/0/compiler/whitebox:/home/srikanth/testruns/JTwork/classes/0 -Dtest.vm.opts=-Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Dtest.tool.vm.opts=-J-Djava.awt.headless=true -J-Xss512k -J-Xverify:all -J-Xmx1024M -J-ea:com.sun.tools... -Dtest.compiler.opts=-XDdev -Dtest.java.opts= -Dtest.jdk=/home/srikanth/gitreps/valhalla/test/../build/linux-x86_64-server-release/images/jdk -Dcompile.jdk=/home/srikanth/gitreps/valhalla/test/../build/linux-x86_64-server-release/images/jdk -Dtest.timeout.factor=2.0 -Dtest.root=/home/srikanth/gitreps/valhalla/test/hotspot/jtreg -Djava.awt.headless=true -Xss512k -Xverify:all -Xmx1024M -ea:com.sun.tools... -Xbootclasspath/a:. -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+WhiteBoxAPI -XX:-UseArrayLoadStoreProfile -XX:+AlwaysIncrementalInline -XX:ValueArrayElemMaxFlatOops=5 -XX:ValueArrayElemMaxFlatSize=-1 -XX:ValueFieldMaxFlatSize=-1 -XX:+ValueTypePassFieldsAsArgs -XX:+ValueTypeReturnedAsFields -Dsun.reflect.inflationThreshold=10000 -XX:-BackgroundCompilation -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,java.lang.invoke.*::* -XX:CompileCommand=compileonly,java.lang.Long::sum -XX:CompileCommand=compileonly,java.lang.Object::<init> -XX:CompileCommand=inline,compiler.valhalla.valuetypes.MyValue*::<init> -XX:CompileCommand=compileonly,compiler.valhalla.valuetypes.*::* compiler.valhalla.valuetypes.TestCallingConvention run
Host: Intel(R) Core(TM) i5-8350U CPU @ 1.70GHz, 8 cores, 15G, Ubuntu 18.04.3 LTS
Time: Thu May 14 16:29:29 2020 IST elapsed time: 0.228397 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f9ff802c800): JavaThread "main" [_thread_in_Java, id=4662, stack(0x00007fa001301000,0x00007fa001382000)]
Stack: [0x00007fa001301000,0x00007fa001382000], sp=0x00007fa00137fa38, free space=506k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
v ~BufferBlob::buffered value type
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0xca7fb6] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.115]+0x446
V [libjvm.so+0xca91fc] Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x10c
V [libjvm.so+0x8dbaa4] JVM_InvokeMethod+0x164
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@15-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@15-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@15-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@15-internal
j compiler.valhalla.valuetypes.TestCallingConvention.test29_verifier(Z)V+17
v ~StubRoutines::call_stub
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0xca7fb6] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.115]+0x446
V [libjvm.so+0xca91fc] Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x10c
V [libjvm.so+0x8dbaa4] JVM_InvokeMethod+0x164
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@15-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@15-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@15-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@15-internal
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+809
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
V [libjvm.so+0x8197db] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x3bb
V [libjvm.so+0x8a77c7] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.107] [clone .constprop.279]+0x167
V [libjvm.so+0x8a9f58] jni_CallStaticVoidMethod+0x138
C [libjli.so+0x5abb] JavaMain+0xebb
C [libjli.so+0x9409] ThreadJavaMain+0x9