8245019: lworld] SIGSEGV in BufferBlob::buffered value type due to instruction memory corruption